# chaingpt

./: .gitignore  Makefile  README.md  config_example.yaml  generate_config.py  pyproject.toml
chaingpt/: __main__.py
chaingpt/api/: Dockerfile  llm.py  session.py  system.py  wolfi.py  workspace.py
chaingpt/cli/: agent.py  app.py  display.py  tools.py
chaingpt/utils/: config.py
tests/api/unittests/: test_session.py  test_wolfi.py  test_workspace.py  utils.py
tests/utils/: llm.py
